# qmk_firmware

./: .gitignore  LOOP_IBKR_FLASHING_GUIDE.md  LOOP_PAD_HID_INTEGRATION.md  WORKBOARD_FLASHING_GUIDE.md  eliot.json  eliotc.c  not_via.json  recent_git.md  using_old_keyboard.md
docs/: CHANGELOG_HID.md  RAW_HID_PROTOCOL.md
keyboards/work_louder/loop/: loop.c
keyboards/work_louder/loop/keymaps/ibkr/: config.h  keymap.c  readme.md  rules.mk
keyboards/work_louder/work_board/: config.h  rules.mk  work_board.c  work_board.h
loop_board_bindings/: CRATE_GOAL.md  KEYBOARD_APP_BLUEPRINT_PLAN.md  KEYBOARD_ENCODER_PLAN.md  qmk_keymap.c
loop_board_bindings/loop-pad-blueprint/: Cargo.toml  README.md  padtest.toml
loop_board_bindings/loop-pad-blueprint/src/: app.rs  config.rs  main.rs
loop_board_bindings/loop-pad-blueprint/src/hid/: device.rs  mock.rs  mod.rs  protocol.rs
loop_board_bindings/loop-pad-blueprint/src/state/: app_state.rs  encoders.rs  mod.rs
loop_board_bindings/loop-pad-blueprint/src/ui/: controls.rs  encoders.rs  keyboard.rs  mod.rs
loop_board_bindings/loop-pad-test/: SOLUTION_SUMMARY.md  test_thread_safety_fixed.rs
loop_board_bindings/loop-pad-test/src/: hid.rs  lib.rs
loop_board_bindings/loop-pad-test/tests/: integration_test.rs
loop_board_bindings/padloop-pad-test/: Cargo.toml  PROTOCOL.md  README.md  padtest.toml  test_simple  test_thread_safety.rs  test_thread_safety_simple.rs  thread_safety_solution.md
loop_board_bindings/padloop-pad-test/src/: config.rs  event.rs  lib.rs  midi.rs  mock.rs
loop_board_bindings/padloop2/: CHANGELOG.md  Cargo.toml  README.md  TRADING_APP_PROMPT.md  new_qmk_keymap.c  qmk_keymap.c
loop_board_bindings/padloop2/config/: bindings.toml
loop_board_bindings/padloop2/src/: config.rs  event.rs  hid.rs  lib.rs  state.rs  trading_state.rs
work_board_test/: Cargo.toml  test_leds.sh
work_board_test/src/: main.rs
(+14 files in other folders)
